Kubernetes/frontend-massage-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-massage-deployment
  labels:
    app: massage-system
spec:
  replicas: 1
  selector:
    matchLabels:
      # app: business-logic
      app: frontend-massage
  template:
    metadata:
      labels:
        # app: business-logic
        app: frontend-massage
    spec:

      containers:
      - name: massage-frontend
        image: massage-reservation-frontend:1.0
        ports:
        - containerPort: 3000
