Kubernetes/business-logic.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: massage-system
  name: backend-massage-service

spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
    # nodePort: 30002
  selector:
    app: business-logic
  type: ClusterIP
