Kubernetes/user-frontend.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: massage-system
  name: frontend-massage-service

spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: frontend-massage
  type: ClusterIP
