Kubernetes/business-logic-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: business-logic-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: backend-massage-service
            port:
              number: 5000
